force-app/main/default/objects/Work_Order__c/Work_Order__c.object-meta.xml
<CustomObject>
    <label>İş Emri</label>
    <pluralLabel>İş Emirleri</pluralLabel>
    <nameField>
        <label>İş Emri No</label>
        <type>AutoNumber</type>
        <displayFormat>WO-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Service work orders (Master-Detail to Case)</description>
</CustomObject>