force-app/main/default/objects/Work_Order__c/fields/Appointment_Date__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Date__c</fullName>
    <label>Randevu Tarihi</label>
    <type>DateTime</type>
</CustomField>