force-app/main/default/objects/Work_Order__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>İlgili Vaka</label>
    <type>MasterDetail</type>
    <referenceTo>Case</referenceTo>
    <relationshipName>Work_Orders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>