force-app/main/default/objects/Work_Order__c/fields/Close_Note__c.field-meta.xml
<CustomField>
    <fullName>Close_Note__c</fullName>
    <label>Kapanış Notu</label>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>