force-app/main/default/objects/Work_Order__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <label>Satış Yapılan Bayi</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipName>Work_Orders_Dealer</relationshipName>
</CustomField>