force-app/main/default/objects/Work_Order__c/fields/Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_Minutes__c</fullName>
    <label>Süre (dk)</label>
    <type>Number</type>
    <formula>IF(NOT(ISBLANK(Appointment_Date__c)), 0, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>