force-app/main/default/objects/Work_Order__c/fields/Related_Unit__c.field-meta.xml
<CustomField>
    <fullName>Related_Unit__c</fullName>
    <label>İlgili Ünite</label>
    <type>Lookup</type>
    <referenceTo>Station_Unit__c</referenceTo>
    <relationshipName>Work_Orders</relationshipName>
</CustomField>