force-app/main/default/objects/Work_Order__c/fields/Station_Address__c.field-meta.xml
<CustomField>
    <fullName>Station_Address__c</fullName>
    <label>İstasyon Adresi</label>
    <type>Text</type>
    <formula>Case__r.Account.BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>