force-app/main/default/objects/Work_Order__c/fields/Unit_Model_No__c.field-meta.xml
<CustomField>
    <fullName>Unit_Model_No__c</fullName>
    <label>Ünite Model No</label>
    <type>Text</type>
    <formula>Related_Unit__r.Model__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>