force-app/main/default/objects/Work_Order__c/fields/Unit_Serial_No__c.field-meta.xml
<CustomField>
    <fullName>Unit_Serial_No__c</fullName>
    <label>Ünite Seri No</label>
    <type>Text</type>
    <formula>Related_Unit__r.Serial_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>