force-app/main/default/objects/Work_Order__c/fields/Unit_Socket_QR__c.field-meta.xml
<CustomField>
    <fullName>Unit_Socket_QR__c</fullName>
    <label>Ünite QR</label>
    <type>Text</type>
    <formula>Related_Unit__r.Socket_Number_QR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>