force-app/main/default/objects/Work_Order__c/fields/Work_Order_Amount__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Amount__c</fullName>
    <label>Tutar</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>