force-app/main/default/objects/Work_Order__c/validationRules/Require_Close_Note.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Close_Note</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, 'Completed'), ISBLANK(Close_Note__c))</errorConditionFormula>
    <errorMessage>Kapanış notu zorunludur</errorMessage>
</ValidationRule>